# egui_dialogs

./: CHANGELOG.md  Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
examples/: dialogs.rs  gallery.rs
src/: dialog_details.rs  dialogs.rs  lib.rs  standard_dialog.rs
