[package]
name = "egui_dialogs"
version = "0.3.4"
edition = "2021"
description = "Platform-agnostic, customizable dialogs for egui library."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/a-littlebit/egui_dialogs"
repository = "https://github.com/a-littlebit/egui_dialogs"
readme = "README.md"

[dependencies]
egui = "0.29.1"
sys-locale = "0.3.1"